namespace TicTacToe.GameViews;

public interface IGameView
{
    public void Start();
    bool IsResume();
}
